--- a/contatos.html
+++ b/contatos.html
@@ -14,13 +14,13 @@
 
 <body>
     <nav class="container-fluid   " id="menugeral" ><!--parte menu(ultilizei o conteiner pra alinhar as divs num elemento só-->
-        <div  >  <a href="index2.html"> 
+        <div  >  <a href="index.html"> 
     <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg"  height="100px" alt="Recod eletro"> </a> 
     </div> 
     <div class="d-flex flex-row-reverse bd-highlight">
-         <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white"  id="menu" href="produtos2.html">Produtos</a> 
-          <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white"  id="menu"href="lojas2.html">Nossas Lojas</a> 
-          <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos2.html"> Contatos </a> 
+         <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white"  id="menu" href="produtos.html">Produtos</a> 
+          <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white"  id="menu"href="lojas.html">Nossas Lojas</a> 
+          <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos.html"> Contatos </a> 
     </div>
     </nav>
 
