--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel=" stylesheet" href="./estilo2.css">
+  <link rel=" stylesheet" href="./estilo.css">
   <title>Recod eletro</title>
 </head>
 
@@ -14,16 +14,16 @@
 
 <!-- menu padrao parte de cima-->
   <nav class="container-fluid   " id="menugeral"> 
-    <div> <a href="index2.html">
+    <div> <a href="index.html">
         <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px" alt="Recod eletro">
       </a>
     </div>
     <div class="d-flex flex-row-reverse bd-highlight">
       <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu"
-        href="produtos2.html">Produtos</a>
-      <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu" href="lojas2.html">Nossas
+        href="produtos.html">Produtos</a>
+      <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu" href="lojas.html">Nossas
         Lojas</a>
-      <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos2.html"> Contatos </a>
+      <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos.html"> Contatos </a>
 
   </nav>
 
@@ -66,7 +66,7 @@
     <div class="row"><!--apenas uma linha-->
       <div id="imgInicial" class="col-sm-3 "> <!-- 3 colunas pra responsividade -->
 
-        <a class="text-dark " href="produtos2.html">
+        <a class="text-dark " href="produtos.html">
           <img src="./img/auto-min.webp" width="100px" onmouseout="imagem_produtos(this)"><br>
           Automotivos</a></div>
 
@@ -75,30 +75,30 @@
             onmouseout="imagem_produtos(this)"><br> Informática </a> </div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos2.html"><img src="./img/galaxy-min.webp" width="100px"
+        <a class="text-dark " href="produtos.html"><img src="./img/galaxy-min.webp" width="100px"
             onmouseout="imagem_produtos(this)"><br>
           Smarthones</a></div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos2.html"><img src="./img/ultilidade.webp" width="100px"
+        <a class="text-dark " href="produtos.html"><img src="./img/ultilidade.webp" width="100px"
             onmouseout="imagem_produtos(this)"><br>Ultilidades Domésticas</a> </div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos2.html"><img src="./img/bebida.webp" width="100px"
+        <a class="text-dark " href="produtos.html"><img src="./img/bebida.webp" width="100px"
             onmouseout="imagem_produtos(this)"><br>
           Bebidas</a></div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos2.html"><img src="./img/audio.webp" width="100px"
+        <a class="text-dark " href="produtos.html"><img src="./img/audio.webp" width="100px"
             onmouseout="imagem_produtos(this)"><br>
           Audio</a></div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos2.html"><img src="./img/decora.webp" width="100px"
+        <a class="text-dark " href="produtos.html"><img src="./img/decora.webp" width="100px"
             onmouseout="imagem_produtos(this)"><br>Decoração</a> </div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos2.html"><img src="./img/eletro portateis.webp" width="100px"
+        <a class="text-dark " href="produtos.html"><img src="./img/eletro portateis.webp" width="100px"
             onmouseout="imagem_produtos(this)"> <br>Eletroportáteis</a> </div>
 
     </div>
