--- a/lojas.html
+++ b/lojas.html
@@ -13,16 +13,16 @@
 
 <body>
     <nav class="container-fluid   " id="menugeral">
-        <div> <a href="index2.html">
+        <div> <a href="index.html">
                 <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
                     alt="Recod eletro"> </a>
         </div>
         <div class="d-flex flex-row-reverse bd-highlight">
             <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu"
-                href="produtos2.html">Produtos</a>
+                href="produtos.html">Produtos</a>
             <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu"
-                href="lojas2.html">Nossas Lojas</a>
-            <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos2.html"> Contatos </a>
+                href="lojas.html">Nossas Lojas</a>
+            <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos.html"> Contatos </a>
         </div>
     </nav>
     <br><br>
