--- a/contatos.html
+++ b/contatos.html
@@ -13,16 +13,23 @@
 
 
 <body>
-    <nav class="container-fluid   " id="menugeral" ><!--parte menu(ultilizei o conteiner pra alinhar as divs num elemento só-->
-        <div  >  <a href="index.html"> 
-    <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg"  height="100px" alt="Recod eletro"> </a> 
-    </div> 
-    <div class="d-flex flex-row-reverse bd-highlight">
-         <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white"  id="menu" href="produtos.html">Produtos</a> 
-          <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white"  id="menu"href="lojas.html">Nossas Lojas</a> 
-          <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos.html"> Contatos </a> 
-    </div>
-    </nav>
+   
+    <div class="container" style="background-color: #ff5100e1;"  > 
+        <a href="index.html">
+       <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
+           alt="Recod eletro"> </a>
+
+
+<div  class="d-flex flex-row-reverse bd-highlight">
+   <a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+       href="produtos.html">Produtos</a>
+   <a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+       href="lojas.html">Nossas Lojas</a>
+   <a   class="p-2  row-align-items-center text-white" id="menu" 
+   href="contatos.html"> Contatos </a>
+</div>
+</div>
+
 
     <br><br><br>
     <!--Na imagem ultilizei a classe img-fluid para ter a responsividade-->
