--- a/index.html
+++ b/index.html
@@ -4,30 +4,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel=" stylesheet" href="./estilo.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel=" stylesheet" href="./estilo.css">
+
   <title>Recod eletro</title>
 </head>
 
 <body>
 
 <!-- menu padrao parte de cima-->
-  <nav class="container-fluid   " id="menugeral"> 
-    <div> <a href="index.html">
-        <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px" alt="Recod eletro">
-      </a>
-    </div>
-    <div class="d-flex flex-row-reverse bd-highlight">
-      <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu"
-        href="produtos.html">Produtos</a>
-      <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu" href="lojas.html">Nossas
-        Lojas</a>
-      <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos.html"> Contatos </a>
+<div class="container" style="background-color: #ff5100e1;"  > 
+  <a href="index.html">
+ <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
+     alt="Recod eletro"> </a>
 
-  </nav>
 
-  </div>
+<div  class="d-flex flex-row-reverse bd-highlight">
+<a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+ href="produtos.html">Produtos</a>
+<a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+ href="lojas.html">Nossas Lojas</a>
+<a   class="p-2  row-align-items-center text-white" id="menu" 
+href="contatos.html"> Contatos </a>
+</div>
+</div>
+
+
+  
 <!--banes iniciais-->
   <div class="container-fluid text-dark ">
     <br>
