--- a/lojas.html
+++ b/lojas.html
@@ -12,20 +12,26 @@
 </head>
 
 <body>
-    <nav class="container-fluid   " id="menugeral">
-        <div> <a href="index.html">
+
+    
+        <div class="container" style="background-color: #ff5100e1;"  > 
+                 <a href="index.html">
                 <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
                     alt="Recod eletro"> </a>
-        </div>
-        <div class="d-flex flex-row-reverse bd-highlight">
-            <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu"
+        
+
+        <div  class="d-flex flex-row-reverse bd-highlight">
+            <a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
                 href="produtos.html">Produtos</a>
-            <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu"
+            <a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
                 href="lojas.html">Nossas Lojas</a>
-            <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos.html"> Contatos </a>
+            <a   class="p-2  row-align-items-center text-white" id="menu" 
+            href="contatos.html"> Contatos </a>
         </div>
-    </nav>
-    <br><br>
+        </div>
+ 
+    <br>
+    <br>
 
 
     <section class="container ">
