--- a/produtos.html
+++ b/produtos.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>Produtos</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel=" stylesheet" href="./estilo2.css">
@@ -12,22 +12,25 @@
 </head>
 
 <body>
-  <nav class="container-fluid   " id="menugeral">
-    <div> <a href="index.html">
-        <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px" alt="Recod eletro">
-      </a>
-    </div>
-    <div class="d-flex flex-row-reverse bd-highlight">
-      <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu"
-        href="produtos.html">Produtos</a>
-      <a class="p-2 flex-row-reverse bd-highlight row-align-items-center text-white" id="menu" href="lojas.html">Nossas
-        Lojas</a>
-      <a class="p-2 bd-highlight row-align-items-center text-white" id="menu" href="contatos.html"> Contatos </a>
-    </div>
-  </nav>
+  <div class="container" style="background-color: #ff5100e1;"  > 
+    <a href="index.html">
+   <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
+       alt="Recod eletro"> </a>
 
 
-  </div>
+<div  class="d-flex flex-row-reverse bd-highlight">
+<a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+   href="produtos.html">Produtos</a>
+<a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+   href="lojas.html">Nossas Lojas</a>
+<a   class="p-2  row-align-items-center text-white" id="menu" 
+href="contatos.html"> Contatos </a>
+</div>
+</div>
+
+
+
+  
   <br>
   <div class="container">
 
@@ -75,9 +78,10 @@
   <br>
   <br>
   <br>
+  <nav class="navbar navbar-expand-lg  justify-content-center   "><!-- responsabilidade e centralização-->
   <div class="row ">
 
-    <div id="p" class="col col-md-3 text-center m-2 x- ">
+    <div id="p" class="col col-md-3 text-center m-2  ">
       <img width="100px" height="100px" src="./img/Fogão.jpg " onmouseover="destaque(this)">
       <p class="text-secondary" id="text1"> Fogão 5 Bocas Mueller <br> Automático Inox </p>
       <hr>
@@ -99,12 +103,15 @@
       <p class="text-danger" id="valor1"> <s> de R$199,00 por </s> </p>
       <p class="text-success" id="valor2"> R$ 109,00 </p>
     </div>
+    
+    
   </div>
-
-
+  
+  
+ 
   <div class="row">
     <!---cada coluna tem 3 elementos (col-md-3) 2px de margem (m-2)-->
-    <div id="p" class="col col-md-3 text-center m-2">
+    <div   class="col col-md-3 p-2 text-center m-2">
       <img width="100px" height="100px" src="./img/maquina_de_lavar.jpg" onmouseover="destaque(this)">
       <p class="text-secondary" id="text1"> Lavadora Electrolux 8.5KG <br> Branca LT09E 110V </p>
       <hr>
@@ -112,7 +119,7 @@
       <p class="text-success" id="valor2"> R$1.907,12 </p>
     </div>
 <!---cada coluna tem 3 elementos (col-md-3) 2px de margem (m-2)-->
-    <div id="p" class="col col-md-3 text-center m-2">
+    <div  class="col col-md-3 text-center m-2">
       <img width="100px" height="100px" src="./img/cafeteira.jpg" onmouseover="destaque(this)">
       <p class="text-secondary" id="text1"> Cafeteira Elétrica Britânia <br> Preto e Inox </p>
       <hr>
@@ -128,7 +135,8 @@
       <p class="text-success" id="valor2"> R$270,00 </p>
     </div>
   </div>
-
+</nav>
+  <nav class="navbar navbar-expand-lg  justify-content-center   ">
   <div class="row ">
     <!---cada coluna tem 3 elementos (col-md-3) 2px de margem (m-2)-->
     <div id="p" class="col col-md-3 text-center m-2">
@@ -189,7 +197,7 @@
       <p class="text-success" id="valor2"> R$ 2.100,90 </p>
     </div>
   </div>
-
+  </nav>
 
 
   <br> <br> <br> <br> <br>
