--- a/contatos.html
+++ b/contatos.html
@@ -7,27 +7,28 @@
     <title>contatos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel=" stylesheet" href="./estilo2.css">
+    <link rel=" stylesheet" href="./estilo.css">
 
 </head>
 
 
 <body>
    
-    <div class="container" style="background-color: #ff5100e1;"  > 
+    <div class="container-fluid" id="menu"  > 
         <a href="index.html">
        <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
            alt="Recod eletro"> </a>
 
+        </div>
 
-<div  class="d-flex flex-row-reverse bd-highlight">
-   <a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+<div  class=" container-fluid d-flex flex-row-reverse ">
+   <a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
        href="produtos.html">Produtos</a>
-   <a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+   <a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
        href="lojas.html">Nossas Lojas</a>
-   <a   class="p-2  row-align-items-center text-white" id="menu" 
+   <a   class="p-2  row-align-items-center text-white" 
    href="contatos.html"> Contatos </a>
-</div>
+
 </div>
 
 
