--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <!-- menu padrao parte de cima-->
-<div class="container" style="background-color: #ff5100e1;"  > 
+<div class="container-fluid" id="menu"  > 
   <a href="index.html">
  <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
      alt="Recod eletro"> </a>
@@ -33,6 +33,7 @@ href="contatos.html"> Contatos </a>
 
   
 <!--banes iniciais-->
+
   <div class="container-fluid text-dark ">
     <br>
     <h2>Bem vindo(a)!</h2>
@@ -42,10 +43,13 @@ href="contatos.html"> Contatos </a>
     <br>
     <img width="100%" src="./img/header-surpresa.webp">
     <br>
-    <img width="200px" src="./img/24x.png">
-
-    <img width="700px " src="./img/1000x408_Topo_3_Outlet_27032020_02.webp">
+    <br>
+    <nav class="navbar navbar-expand-lg  justify-content-center   ">
+    <img width="100px" src="./img/24x.png">
+    <img width="300px " src="./img/1000x408_Topo_3_Outlet_27032020_02.webp">
+  </nav>
   </div>
+
   <br><br><br><br>
   <br><br><br>
   <br><br><br><br>
