--- a/lojas.html
+++ b/lojas.html
@@ -7,14 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel=" stylesheet" href="./estilo2.css">
+    <link rel=" stylesheet" href="./estilo.css">
 
 </head>
 
 <body>
 
     
-        <div class="container" style="background-color: #ff5100e1;"  > 
+        <div class="container-fluid" id="menu"  > 
                  <a href="index.html">
                 <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
                     alt="Recod eletro"> </a>
