--- a/produtos.html
+++ b/produtos.html
@@ -7,12 +7,12 @@
   <title>Produtos</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel=" stylesheet" href="./estilo2.css">
+  <link rel=" stylesheet" href="./estilo.css">
 
 </head>
 
 <body>
-  <div class="container" style="background-color: #ff5100e1;"  > 
+  <div class="container-fluid" id="menu"  > 
     <a href="index.html">
    <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
        alt="Recod eletro"> </a>
@@ -32,13 +32,13 @@ href="contatos.html"> Contatos </a>
 
   
   <br>
-  <div class="container">
-
-    <img width="100%" src="./img/header-surpresa.webp">
-    <img width="200px" src="./img/24x.png">
-    <img width="700px " src="./img/1000x408_Topo_3_Outlet_27032020_02.webp">
-
-  </div>
+  <img class="contenier-fluid" width="100%" src="./img/header-surpresa.webp">
+  <br>
+  <br>
+  <nav class="navbar navbar-expand-lg  justify-content-center   ">
+    <img width="100px" src="./img/24x.png">
+    <img width="300px " src="./img/1000x408_Topo_3_Outlet_27032020_02.webp">
+  </nav>
   <br> <br> <br> <br> <br>
 
   <nav class="navbar navbar-expand-lg  justify-content-center   ">
