--- a/contatos.html
+++ b/contatos.html
@@ -14,14 +14,14 @@
 
 <body>
    
-    <div class="container-fluid" id="menu"  > 
+    <div class="container-fluid"   > 
         <a href="index.html">
        <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
            alt="Recod eletro"> </a>
 
         </div>
 
-<div  class=" container-fluid d-flex flex-row-reverse ">
+<div id="menu"  class=" container-fluid d-flex flex-row-reverse ">
    <a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
        href="produtos.html">Produtos</a>
    <a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
