--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
  <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
      alt="Recod eletro"> </a>
 
+  </div>
 
-<div  class="d-flex flex-row-reverse bd-highlight">
-<a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+<div id="menu"  class="  container-fluid d-flex flex-row-reverse ">
+<a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
  href="produtos.html">Produtos</a>
-<a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+<a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
  href="lojas.html">Nossas Lojas</a>
-<a   class="p-2  row-align-items-center text-white" id="menu" 
+<a   class="p-2  row-align-items-center text-white" 
 href="contatos.html"> Contatos </a>
-</div>
-</div>
 
+</div>
 
   
 <!--banes iniciais-->
