--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Produtos</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -19,11 +19,11 @@
 
 
 <div  class="d-flex flex-row-reverse bd-highlight">
-<a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+<a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
    href="produtos.html">Produtos</a>
-<a  class="p-2 flex-row-reverse  row-align-items-center text-white" id="menu"
+<a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
    href="lojas.html">Nossas Lojas</a>
-<a   class="p-2  row-align-items-center text-white" id="menu" 
+<a   class="p-2  row-align-items-center text-white" 
 href="contatos.html"> Contatos </a>
 </div>
 </div>
