--- a/contatos.html
+++ b/contatos.html
@@ -14,22 +14,24 @@
 
 <body>
    
-    <div class="container-fluid"   > 
-        <a href="index.html">
-       <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
-           alt="Recod eletro"> </a>
-
-        </div>
-
-<div id="menu"  class=" container-fluid d-flex flex-row-reverse ">
-   <a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
-       href="produtos.html">Produtos</a>
-   <a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
-       href="lojas.html">Nossas Lojas</a>
-   <a   class="p-2  row-align-items-center text-white" 
-   href="contatos.html"> Contatos </a>
-
-</div>
+    <!-- menu padrao parte de cima-->
+<div class="container-fluid" id="menu"  > 
+    <a href="index.html">
+   <img width="250px" src="./img/WhatsApp Image 2020-09-23 at 7.40.04 PM.jpeg" height="100px"
+       alt="Recod eletro"> </a>
+  
+    </div>
+  
+  <div id="menu"  class="  container-fluid d-flex flex-row-reverse ">
+  <a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
+   href="produtos.html">Produtos</a>
+  <a  class="p-2 flex-row-reverse  row-align-items-center text-white" 
+   href="lojas.html">Nossas Lojas</a>
+  <a   class="p-2  row-align-items-center text-white" 
+  href="contatos.html"> Contatos </a>
+  
+  </div>
+  
 
 
     <br><br><br>
@@ -71,7 +73,7 @@
                     <br>
         </div>
 <!-- Aqui comecei meu projeto de formulario de inicio centralizei dele por uma div com class tex-center com m-5(margen)-->
-        <div class="col-11 text-center m-5">
+        <div class=" container-fluid col-11 text-center m-5">
             <!--acrescentei o titulo-->
             <h1 class="display-3">Deixe aqui seu feedback </h1>
             <!--novamente incluir icones do boodstrap-->
@@ -106,7 +108,7 @@
             <div class="row justify-content-center "> 
                 <!--dentro dessa linha abrir colunas pra responsividade de acordo com o aparelho -->
                 <div class="col-sm-12 col-md-10 col-lg-8">
-                    <form>
+                    <form class="container">
 
                         <div class="form-row"><!--criei grupos de linhas para se ajustarem de acordo com a responsividade-->
 
