--- a/contatos.html
+++ b/contatos.html
@@ -36,7 +36,7 @@
 
     <br><br><br>
     <!--Na imagem ultilizei a classe img-fluid para ter a responsividade-->
-    <img src="./img/banner-entre-em-contato-informacoes-de-frete-prefiro-vinho.png" class="img-fluid" alt="contato">
+    <img src="./img/banner-entre-em-contato-informacoes-de-frete-prefiro-vinho.png" class="container" alt="contato">
     <br><br><br><br>
 
     
@@ -108,9 +108,9 @@
             <div class="row justify-content-center "> 
                 <!--dentro dessa linha abrir colunas pra responsividade de acordo com o aparelho -->
                 <div class="col-sm-12 col-md-10 col-lg-8">
-                    <form class="container">
+                    <form >
 
-                        <div class="form-row"><!--criei grupos de linhas para se ajustarem de acordo com a responsividade-->
+                        <div class=" container form-row"><!--criei grupos de linhas para se ajustarem de acordo com a responsividade-->
 
                             <div class="form-goup col-sm"><!--dentro da linha 2 elementos a label eo input-->
                                 <br>
@@ -124,7 +124,7 @@
                                 <input type="text" class="form-control" name="sobrenome" placeholder="sobrenome">
                             </div>
                         </div>
-                        <div class=" form-row"><!--criei grupos de linhas-->
+                        <div class=" container form-row"><!--criei grupos de linhas-->
                             <div class="form-goup col-sm"><!--dentro da linha 2 elementos a label eo input-->
                                 <br>
                                 <label for="Cidade"> Cidade</label>
@@ -137,7 +137,7 @@
                                 <input type="number" class="form-control" name="telefone" placeholder="(ddd)xxx-xxx ">
                             </div>
                         </div>
-                        <div class="form-row"><!--criei grupos de linhas-->
+                        <div class=" container form-row"><!--criei grupos de linhas-->
                             <div class="form-group "><!--dentro da linha 2 elementos a label eo input-->
                                 <label for="comentario">Comentario</label>
                                 <br>
@@ -145,7 +145,7 @@
                                 </textarea>
                             </div>    
                         </div>
-                        <div class="form-row">
+                        <div class="container form-row">
                             <!-- o botão criado, ultilizei a class btn com a cor no fundo azul (primary)-->
                             <button type="submit" class="btn btn-primary">Enviar</button>
 
