--- a/contatos.html
+++ b/contatos.html
@@ -137,7 +137,7 @@
                                 <input type="number" class="form-control" name="telefone" placeholder="(ddd)xxx-xxx ">
                             </div>
                         </div>
-                        <div class=" container form-row"><!--criei grupos de linhas-->
+                        <div class=" container form-row justify-content-center"><!--criei grupos de linhas-->
                             <div class="form-group "><!--dentro da linha 2 elementos a label eo input-->
                                 <label for="comentario">Comentario</label>
                                 <br>
@@ -145,7 +145,7 @@
                                 </textarea>
                             </div>    
                         </div>
-                        <div class="container form-row">
+                        <div class="container form-row justify-content-center">
                             <!-- o botão criado, ultilizei a class btn com a cor no fundo azul (primary)-->
                             <button type="submit" class="btn btn-primary">Enviar</button>
 
