--- a/contatos.html
+++ b/contatos.html
@@ -35,14 +35,16 @@
 
 
     <br><br><br>
+    <div class="container justify-content-center">
     <!--Na imagem ultilizei a classe img-fluid para ter a responsividade-->
-    <img src="./img/banner-entre-em-contato-informacoes-de-frete-prefiro-vinho.png" class="container" alt="contato">
+    <img   width="" src="./img/banner-entre-em-contato-informacoes-de-frete-prefiro-vinho.png" alt="contato">
+    </div>
     <br><br><br><br>
 
     
 
-    <div class="container-fluid"><!--parte contatos(ultilizei o conteiner pra alinhar as divs num elemento só-->
-        <div class="border   text-center p-5"> <!-- aqui acrescentei a class border mais pelo estilo mesmo-->
+    <div class="container"><!--parte contatos(ultilizei o conteiner pra alinhar as divs num elemento só-->
+        <div class="  border   justify-content-center p-5"> <!-- aqui acrescentei a class border mais pelo estilo mesmo-->
 
 <!-- as tags svg ultilizei do boodstrap para obter os icones-->
             <svg width="100px" height="100px" viewBox="0 0 16 16" class="bi bi-envelope-fill" fill="currentColor"
