--- a/index.html
+++ b/index.html
@@ -70,44 +70,51 @@ href="contatos.html"> Contatos </a>
 
   <br><br> <br>
   <!-- as imagens exposta com href para pagina de produtos-->
-  <div class="container "><!--tudo dentro de um container-->
-    <div class="row"><!--apenas uma linha-->
-      <div id="imgInicial" class="col-sm-3 "> <!-- 3 colunas pra responsividade -->
+  <div class="container  "><!--tudo dentro de um container-->
+    <div class="row bg-primary"><!--apenas uma linha-->
+      
+      <div   id="imgInicial" class="col-sm-3   "> <!-- 3 colunas pra responsividade -->
 
-        <a class="text-dark " href="produtos.html">
-          <img src="./img/auto-min.webp" width="100px" onmouseout="imagem_produtos(this)"><br>
-          Automotivos</a></div>
+        <a id="imga" class="text-dark " href="produtos.html">
+          <img src="./img/auto-min.webp" width="100px" onmouseout="imagem_produtos(this)">
+          <br>
+          <p id="imga">Automotivos</p></a>
+        </div>
 
       <div id="imgInicial" class="col-sm-3 "><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos.html"><img src="./img/notebook-min.webp" width="100px"
-            onmouseout="imagem_produtos(this)"><br> Informática </a> </div>
+        <a id="imga" class="text-dark " href="produtos.html"><img src="./img/notebook-min.webp" width="100px"
+            onmouseout="imagem_produtos(this)"><br><p id="imga">Informática</p> </a> </div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos.html"><img src="./img/galaxy-min.webp" width="100px"
+        <a id="imga" class="text-dark " href="produtos.html"><img src="./img/galaxy-min.webp" width="100px"
             onmouseout="imagem_produtos(this)"><br>
-          Smarthones</a></div>
+          <p id="imga">Smarthones </p></a></div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos.html"><img src="./img/ultilidade.webp" width="100px"
-            onmouseout="imagem_produtos(this)"><br>Ultilidades Domésticas</a> </div>
+        <a id="imga" class="text-dark " href="produtos.html"><img src="./img/ultilidade.webp" width="100px"
+            onmouseout="imagem_produtos(this)"><br> <p id="imga">Ultilidades Domésticas </p></a> 
+          </div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos.html"><img src="./img/bebida.webp" width="100px"
+        <a id="imga" class="text-dark " href="produtos.html"><img src="./img/bebida.webp" width="100px"
             onmouseout="imagem_produtos(this)"><br>
-          Bebidas</a></div>
+          <p id="imga">Bebidas </p></a>
+        </div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos.html"><img src="./img/audio.webp" width="100px"
+        <a id="imga" class="text-dark " href="produtos.html"><img src="./img/audio.webp" width="100px"
             onmouseout="imagem_produtos(this)"><br>
-          Audio</a></div>
+            <p id="imga">Audio</a></div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos.html"><img src="./img/decora.webp" width="100px"
-            onmouseout="imagem_produtos(this)"><br>Decoração</a> </div>
+        <a id="imga" class="text-dark " href="produtos.html"><img src="./img/decora.webp" width="100px"
+            onmouseout="imagem_produtos(this)"><br>  <p id="imga">Decoração </p></a> 
+          </div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
-        <a class="text-dark " href="produtos.html"><img src="./img/eletro portateis.webp" width="100px"
-            onmouseout="imagem_produtos(this)"> <br>Eletroportáteis</a> </div>
+        <a  id="imga"class="text-dark " href="produtos.html"><img src="./img/eletro portateis.webp" width="100px"
+            onmouseout="imagem_produtos(this)"> <br>  <p id="imga">Eletroportáteis </p></a> 
+          </div>
 
     </div>
 
