--- a/lojas.html
+++ b/lojas.html
@@ -64,7 +64,7 @@
             <div class="container">
                 <h3 class="text-left text-primary">Rio de Janeiro (centro) </h3>
                 <p class="text-left text-primary"> Av. Pastor Martin Luther King Júnior, 126 Piso 1 Del Castilho </p> 
-                    class="text-left text-primary"> RJ, 20760-005 </p>
+                   <p class="text-left text-primary"> RJ, 20760-005 </p>
                 <p class="text-left text-primary"> Horário: 7:00 as 18:00</p>
                 <p class="text-left text-primary"> Telefone: (21) 2701-7278 </p>
             </div>
