--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ href="contatos.html"> Contatos </a>
   <div class="container  "><!--tudo dentro de um container-->
     <div class="row bg-primary"><!--apenas uma linha-->
       
-      <div   id="imgInicial" class="col-sm-3   "> <!-- 3 colunas pra responsividade -->
+      <div   id="imgInicial" class="col-sm-3 "> <!-- 3 colunas pra responsividade -->
 
         <a id="imga" class="text-dark " href="produtos.html">
           <img src="./img/auto-min.webp" width="100px" onmouseout="imagem_produtos(this)">
@@ -104,7 +104,7 @@ href="contatos.html"> Contatos </a>
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
         <a id="imga" class="text-dark " href="produtos.html"><img src="./img/audio.webp" width="100px"
             onmouseout="imagem_produtos(this)"><br>
-            <p id="imga">Audio</a></div>
+            <p id="imga">Audio</p> </a></div>
 
       <div id="imgInicial" class="col-sm-3"><!-- 3 colunas pra responsividade -->
         <a id="imga" class="text-dark " href="produtos.html"><img src="./img/decora.webp" width="100px"
